--- a/build.gradle
+++ b/build.gradle
@@ -37,8 +37,11 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 
+	testImplementation 'junit:junit:4.12'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation group: 'com.google.code.gson', name: 'gson', version: '2.10'
+	testImplementation 'org.mockito:mockito-core:3.12.4'
+	testImplementation 'org.mockito:mockito-inline:3.12.4'
 }
 
 tasks.named('test') {
