--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,33 @@ dependencies {
 	testImplementation 'org.mockito:mockito-inline:3.12.4'
 }
 
+sourceSets {
+	integrationTest {
+		java {
+			compileClasspath += sourceSets.main.output + configurations.testRuntimeClasspath
+			runtimeClasspath += sourceSets.main.output + configurations.testRuntimeClasspath
+			srcDir file('src/integrationTest/java')
+		}
+		resources.srcDir file('src/integrationTest/resources')
+	}
+}
+
+configurations {
+	integrationTestImplementation.extendsFrom testImplementation
+	integrationTestRuntimeOnly.extendsFrom testRuntimeOnly
+}
+
 tasks.named('test') {
 	useJUnitPlatform()
 }
+
+
+task integrationTest(type: Test) {
+	description = 'Runs the integration tests.'
+	testClassesDirs = sourceSets.integrationTest.output.classesDirs
+	classpath = sourceSets.integrationTest.runtimeClasspath
+	shouldRunAfter test
+	useJUnitPlatform()
+}
+
+check.dependsOn integrationTest
